--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,6 +18,7 @@ jobs:
 
     - name: Install Dependencies
       run: |
+        sudo apt-get update && sudo apt-get install xorg-dev
         go mod download
         go install fyne.io/fyne/v2/cmd/fyne@latest
 
