--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,7 +37,7 @@ jobs:
     - name: Desktop Builds
       run: |
         mkdir builds && chmod 777 builds
-        GOOS=windows GOARCH=amd64 go build -o builds/ShareiT-windows-amd64.exe
+        CGO_ENABLED=1 GOOS=windows GOARCH=amd64 go build -o builds/ShareiT-windows-amd64.exe
         echo "Windows 64-bit build complete"
 
     - name: Setup Android NDK
