--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,7 @@ jobs:
 
     - name: Install Dependencies
       run: |
-        sudo apt-get -qq update && sudo apt-get -qq -y install xorg-dev gcc cpp
+        sudo apt-get -qq update && sudo apt-get -qq -y install xorg-dev gcc cpp gcc-mingw-w64
         go mod download
         go install fyne.io/fyne/v2/cmd/fyne@latest
 
@@ -37,7 +37,7 @@ jobs:
     - name: Desktop Builds
       run: |
         mkdir builds && chmod 777 builds
-        CGO_ENABLED=1 GOOS=windows GOARCH=amd64 go build -o builds/ShareiT-windows-amd64.exe
+        GOOS=windows GOARCH=amd64 CGO_ENABLED=1 CC=x86_64-w64-mingw32-gcc go build -o builds/ShareiT-windows-amd64.exe
         echo "Windows 64-bit build complete"
 
     - name: Setup Android NDK
