--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,21 +22,13 @@ jobs:
         go mod download
         go install fyne.io/fyne/v2/cmd/fyne@latest
 
-    # - name: Desktop Builds
-    #   run: |
-    #     mkdir builds && chmod 777 builds
-    #     GOOS=linux GOARCH=amd64 go build -o builds/ShareiT-linux-amd64
-    #     echo "Linux 64-bit build complete"
-    #     GOOS=linux GOARCH=arm64 go build -o builds/ShareiT-linux-arm64
-    #     echo "Linux arm64-bit build complete"
-    #     GOOS=darwin GOARCH=amd64 go build -o builds/ShareiT-macos-amd64
-    #     echo "MacOS 64-bit build complete"
-    #     GOOS=windows GOARCH=amd64 go build -o builds/ShareiT-windows-amd64.exe
-    #     echo "Windows 64-bit build complete"
-
     - name: Desktop Builds
       run: |
         mkdir builds && chmod 777 builds
+        GOOS=linux GOARCH=amd64 go build -o builds/ShareiT-linux-amd64
+        echo "Linux 64-bit build complete"
+        GOOS=linux GOARCH=arm64 go build -o builds/ShareiT-linux-arm64
+        echo "Linux arm64-bit build complete"
         GOOS=windows GOARCH=amd64 CGO_ENABLED=1 CC=x86_64-w64-mingw32-gcc go build -o builds/ShareiT-windows-amd64.exe
         echo "Windows 64-bit build complete"
 
@@ -59,6 +51,6 @@ jobs:
     - name: Create Release
       uses: ncipollo/release-action@v1.10.0
       with:
-        artifact: builds/*
+        artifacts: builds/*
         body: "Builds for ShareiT."
         name: "Builds"
